// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"linkCards":false} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"linkCards":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"linkCards":true} 1`] = `
"<a class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100 hover:bg-ink-200\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</a>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","linkCards":false} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","linkCards":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","linkCards":true} 1`] = `
"<a class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100 hover:bg-ink-200\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</a>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","statType":"analyzer","linkCards":false} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","statType":"analyzer","linkCards":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","statType":"analyzer","linkCards":true} 1`] = `
"<a class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100 hover:bg-ink-200\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</a>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","statType":"analyzer"} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","statType":"category","linkCards":false} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","statType":"category","linkCards":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","statType":"category","linkCards":true} 1`] = `
"<a class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100 hover:bg-ink-200\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</a>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","statType":"category"} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","statType":null,"linkCards":false} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","statType":null,"linkCards":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","statType":null,"linkCards":true} 1`] = `
"<a class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100 hover:bg-ink-200\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</a>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url","statType":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":"sample-url"} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\"><img src=\\"sample-url\\" alt=\\"Security\\" class=\\"hidden h-4 w-4 flex-shrink-0 sm:inline-block\\">
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"linkCards":false} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"linkCards":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"linkCards":true} 1`] = `
"<a class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100 hover:bg-ink-200\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</a>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"statType":"analyzer","linkCards":false} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"statType":"analyzer","linkCards":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"statType":"analyzer","linkCards":true} 1`] = `
"<a class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100 hover:bg-ink-200\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</a>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"statType":"analyzer"} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"statType":"category","linkCards":false} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"statType":"category","linkCards":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"statType":"category","linkCards":true} 1`] = `
"<a class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100 hover:bg-ink-200\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</a>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"statType":"category"} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"statType":null,"linkCards":false} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"statType":null,"linkCards":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"statType":null,"linkCards":true} 1`] = `
"<a class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100 hover:bg-ink-200\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</a>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null,"statType":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"logoUrl":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"statType":"analyzer","linkCards":false} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"statType":"analyzer","linkCards":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"statType":"analyzer","linkCards":true} 1`] = `
"<a class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100 hover:bg-ink-200\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</a>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"statType":"analyzer"} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"statType":"category","linkCards":false} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"statType":"category","linkCards":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"statType":"category","linkCards":true} 1`] = `
"<a class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100 hover:bg-ink-200\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</a>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"statType":"category"} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"statType":null,"linkCards":false} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"statType":null,"linkCards":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"statType":null,"linkCards":true} 1`] = `
"<a class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100 hover:bg-ink-200\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</a>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {"statType":null} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;

exports[`[[ DistributionStatCard ]] renders DistributionStatCard with all prop options: {} 1`] = `
"<div class=\\"flex flex-col gap-y-3 rounded-md bg-ink-300 p-3 text-vanilla-100\\">
  <h5 class=\\"flex items-center gap-x-2 text-sm font-medium leading-4\\">
    <zicon-stub icon=\\"security\\" color=\\"vanilla-100\\" class=\\"hidden sm:inline-block\\"></zicon-stub>
    Security
  </h5>
  <div class=\\"text-base font-semibold leading-6\\">
    7
  </div>
</div>"
`;
